test/asm/undefined-dot.err
error: undefined-dot.asm(3) : '.' not defined
